--- a/CompetenceTree/CompetenceTreeEar/pom.xml
+++ b/CompetenceTree/CompetenceTreeEar/pom.xml
@@ -15,12 +15,12 @@
     <packaging>ear</packaging>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>${epby.ericpol.service}</artifactId>
             <version>${project.version}</version>
             <type>ejb</type>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>WebProject</artifactId>
@@ -44,10 +44,10 @@
                     <applicationName>Competence Tree Tool</applicationName>
                     <includeLibInApplicationXml>true</includeLibInApplicationXml>
                     <modules>
-                        <ejbModule>
+                        <!--<ejbModule>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>${epby.ericpol.service}</artifactId>
-                        </ejbModule>
+                        </ejbModule>-->
                         <webModule>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>WebProject</artifactId>
